# led-o-matic

./: .gitignore  CMakeLists.txt  Makefile  konker_bitfont_basic.h  led-o-matic.py  led-o-maticd.c  led-o-maticd.example.ini  led-o-maticd.ini  listener  test-daemon.cpp  test-udp-daemon  test-udp-daemon.c  ultrathin_test6.ino
client_libs/python/: booking_counts.py  foo.py  led_o_matic.py
experiments/: led-o-matic.cpp  listener.c  test-daemon.c  test-udp-daemon.c
fonts/: ascii-6.hex  font8x8.hex  iso-8859-15.hex
include/: hexfont_iso-8859-15.h  led-o-maticd.h  led-o-maticd_args.h  led-o-maticd_command.h  led-o-maticd_config.h  led-o-maticd_matrix.h  led-o-maticd_udp.h
src/: led-o-maticd.c  led-o-maticd_args.c  led-o-maticd_command.c  led-o-maticd_config.c  led-o-maticd_matrix.c  led-o-maticd_udp.c
